src/snapshots/cornercase__ui__tests__compact__renders_commits_to_pull_in_the_workspaces_menu.snap
---
source: src/ui.rs
expression: render_small(&v).backend()
---
"                                                                                "
"   ≡     cornercase › feat/login › claude                                   ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" ‹ projects    cornercase                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  feat/login                                                           ↓12      "
"                                                                                "
"                                                                                "
"  ▌ claude                                                                      "
"                                                                                "
"                                                                                "
"    nvim                                                                        "
"                                                                                "
"                                                                                "
"    + tab                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  ↓ 2 more                                                                      "
"                                                                                "
"  + new workspace                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
