src/snapshots/cornercase__ui__tests__compact__renders_groups_in_the_projects_menu.snap
---
source: src/ui.rs
expression: "render_small(&with_groups(in_a_project(Some(Nav::Projects)))).backend()"
---
"                                                                                "
"   ≡     shop › feat/login › claude                                         ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" projects                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  cornercase (1)                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ▾ ● work                                                                      "
"                                                                                "
"                                                                                "
"▌   shop (1)                                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"  + new project                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ────────────────────────────────────────────────────────────────────────────── "
"                                                                                "
"  settings                                quit                                  "
"                                                                                "
