src/snapshots/cornercase__ui__tests__compact__renders_the_bar_over_the_pane.snap
---
source: src/ui.rs
expression: render_small(&in_a_project(None)).backend()
---
"                                                                                "
"   ≡     cornercase › feat/login › claude                                   ⌕   "
"                                                                                "
" no tab open                                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
