src/snapshots/cornercase__ui__tests__compact__renders_the_landing_line_between_tabs.snap
---
source: src/ui.rs
expression: "render_small(&View\n{ drag: Some(Drag::Workspaces(dragged, landing)), ..v }).backend()"
---
"                                                                                "
"   ≡     cornercase › feat/login › claude                            ☐      ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" ‹ projects    cornercase                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  feat/login                                                                 ×  "
"                                                                                "
"                                                                                "
"  ▌ claude                                                                   ×  "
"                                                                                "
"                                                                                "
"    nvim                                                                     ×  "
"                                                                                "
"    ─────────────────────────────────────────────────────────────────────────── "
"                                                                                "
"    + tab                                                                       "
"                                                                                "
"                                                                                "
"  ↓ 2 more                                                                      "
"                                                                                "
"  + new workspace                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
