src/snapshots/cornercase__ui__tests__compact__renders_the_projects_menu.snap
---
source: src/ui.rs
expression: "render_small(&in_a_project(Some(Nav::Projects))).backend()"
---
"                                                                                "
"   ≡     cornercase › feat/login › claude                                   ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" projects                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"▌ cornercase (1)                                                                "
"                                                                                "
"                                                                                "
"  shop (1)                                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"  + new project                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ────────────────────────────────────────────────────────────────────────────── "
"                                                                                "
"  settings                                quit                                  "
"                                                                                "
