src/snapshots/cornercase__ui__tests__compact__renders_the_workspaces_menu.snap
---
source: src/ui.rs
expression: "render_small(&in_a_project(Some(Nav::Workspaces))).backend()"
---
"                                                                                "
"   ≡     cornercase › feat/login › claude                                   ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" ‹ projects    cornercase                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  feat/login                                                                    "
"                                                                                "
"                                                                                "
"  ▌ claude                                                                      "
"                                                                                "
"                                                                                "
"    nvim                                                                        "
"                                                                                "
"                                                                                "
"    + tab                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  ↓ 2 more                                                                      "
"                                                                                "
"  + new workspace                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
